att colors and ogImage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>I & L</title>
+  <meta property="og:image" content="./background.jpg">
+  <title>♥ Our Day</title>
   <style>
     @font-face {
       font-family: "sunday romantic";
@@ -37,10 +38,9 @@
       font-family: sans-serif;
 
     }
-
     .content {
-      color: rgb(184, 9, 9);
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.281);
+      color: rgb(204, 61, 61);
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.137);
       font-size: 30px;
 
       font-family: "sunday romantic";
